Name:               libmpd
Version:            0.9.1.0
Synopsis:           An MPD client library.
Description:        A client library for MPD, the Music Player Daemon.
Category:           Network, Sound

License:            MIT
License-file:       LICENSE
Copyright:          Ben Sinclair 2005-2009, Joachim Fasting 2007-2015,
                    Daniel Schoepe 2009, Andrzej Rybczak 2010,
                    Simon Hengel 2011-2014, Niklas Haas 2012,
                    Matvey Aksenov 2014, Wieland Hoffmann 2014,
                    Tim Heap 2014, Tobias Brandt 2014

Author:             Ben Sinclair

Maintainer:         Joachim Fasting <joachifm@fastmail.fm>
Stability:          beta
Homepage:           http://github.com/vimus/libmpd-haskell#readme
Bug-reports:        http://github.com/vimus/libmpd-haskell/issues

Tested-With:        GHC ==8.0.1, GHC==8.2.2, GHC==8.4.3, GHC==8.6.1
Build-Type:         Simple
Cabal-Version:      >= 1.10

Extra-Source-Files:
    README.md
    changelog.md
    tests/*.hs

Source-Repository head
    type:       git
    location:   https://github.com/vimus/libmpd-haskell

Library
    Default-Language:   Haskell2010

    Hs-Source-Dirs:     src

    Build-Depends:
        -- Platform dependencies
        base >= 4.9 && < 5
      , attoparsec >= 0.10.1 && < 1
      , bytestring >= 0.9 && < 1
      , containers >= 0.3 && < 1
      , filepath >= 1 && < 2
      , mtl >= 2.0 && < 3
      , old-locale >= 1 && < 2
      , text >= 0.11 && < 2

        -- Additional dependencies
      , data-default-class >= 0.0.1 && < 1
      , network >= 2.6.3.5
      , safe-exceptions >= 0.1 && < 0.2
      , utf8-string >= 0.3.1 && < 1.1

    if impl(ghc >= 7.10.0)
        Build-Depends:
            time >= 1.5
    else
        Build-Depends:
            time >= 1.1 && <1.5

    Exposed-Modules:
        Network.MPD
      , Network.MPD.Applicative
      , Network.MPD.Applicative.ClientToClient
      , Network.MPD.Applicative.Connection
      , Network.MPD.Applicative.CurrentPlaylist
      , Network.MPD.Applicative.Database
      , Network.MPD.Applicative.Mount
      , Network.MPD.Applicative.Output
      , Network.MPD.Applicative.PlaybackControl
      , Network.MPD.Applicative.PlaybackOptions
      , Network.MPD.Applicative.Reflection
      , Network.MPD.Applicative.Status
      , Network.MPD.Applicative.Stickers
      , Network.MPD.Applicative.StoredPlaylists
      , Network.MPD.Commands.Extensions
      , Network.MPD.Core

    Other-Modules:
        Network.MPD.Core.Class
      , Network.MPD.Core.Error
      , Network.MPD.Commands
      , Network.MPD.Commands.Arg
      , Network.MPD.Commands.Parse
      , Network.MPD.Commands.Query
      , Network.MPD.Commands.Types
      , Network.MPD.Commands.ClientToClient
      , Network.MPD.Commands.Status
      , Network.MPD.Commands.PlaybackOptions
      , Network.MPD.Commands.PlaybackControl
      , Network.MPD.Commands.CurrentPlaylist
      , Network.MPD.Commands.StoredPlaylists
      , Network.MPD.Commands.Database
      , Network.MPD.Commands.Stickers
      , Network.MPD.Commands.Connection
      , Network.MPD.Commands.Output
      , Network.MPD.Commands.Reflection
      , Network.MPD.Commands.Mount
      , Network.MPD.Applicative.Util
      , Network.MPD.Applicative.Internal
      , Network.MPD.Util

    ghc-options:        -Wall

Test-Suite specs
    type:               exitcode-stdio-1.0
    Default-Language:   Haskell2010
    Main-Is:            Main.hs
    Hs-Source-Dirs:     src tests
    cpp-options:        -DTEST -Wall -Werror
    ghc-options:        -fno-warn-missing-signatures

    Build-Depends:
        -- Platform dependencies
        base
      , attoparsec
      , bytestring
      , containers
      , filepath
      , mtl
      , old-locale
      , text
      , time

        -- Additional dependencies
      , data-default-class
      , network
      , safe-exceptions
      , utf8-string

        -- Test dependencies
      , unix
      , QuickCheck >= 2.10
      , hspec >= 1.3
