Name:            mpd
Version:         0.1
License:         LGPL
License-file:    LICENSE
Copyright:       Ben Sinclair 2005
Author:          Ben Sinclair
Maintainer:      bsinclai@turing.une.edu.au
Stability:       alpha
Homepage:        http://turing.une.edu.au/~bsinclai/code
Synopsis:        A MPD client library.
Tested-With:     GHC == 6.5, GHC == 6.6.1
Build-Depends:   base, network
Exposed-Modules: MPD
ghc-options:     -Wall -O2
